style.css
@import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Orbitron", sans-serif;
  transition: all 0.4s ease;
}

body {
  min-height: 100vh;
  width: 100%;
  display: grid;
  align-items: center;
  justify-content: center;
  background: #f0f8ff;
  padding: 0 20px;
}

section {
  min-height: 50vh;
  width: 100vw;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 0 20px;
}

body.dark {
  background: #24292d;
}

section .container {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 220px;
  max-width: 560px;
  width: 100%;
  background: #fff;
  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
  border-radius: 12px;
  position: relative;
}

body.dark .container {
  background: #323840;
}

.icons i {
  position: absolute;
  right: 17px;
  top: 17px;
  height: 30px;
  background: #24292d;
  color: #fff;
  text-align: center;
  line-height: 30px;
  border-radius: 50%;
  font-size: 14px;
  cursor: pointer;
}

body.dark .container .icons i {
  background: #fff;
  color: #323840;
}

.icons i.fa-sun {
  opacity: 0;
  pointer-events: none;
}

body.dark .container .icons i.fa-sun {
  opacity: 1;
  pointer-events: auto;
  font-size: 16px;
}

section .container .time {
  display: flex;
  align-items: center;
}

.container .time .time-colon {
  display: flex;
  align-items: center;
  position: relative;
}

.time .time-colon .am_pm {
  position: absolute;
  top: 0;
  right: -50px;
  font-size: 20px;
  font-weight: 700;
  letter-spacing: 1px;
}

body.dark .time .time-colon .am_pm {
  color: #fff;
}

.time .time-colon .time-text {
  height: 100px;
  width: 100px;
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: center;
  background: #f0f8ff;
  border-radius: 6px;
  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
}

body.dark .time .time-colon .time-text {
  background: #24292d;
}

.time .time-colon .time-text,
.time .time-colon .colon {
  font-size: 35px;
  font-weight: 600;
}

body.dark .time .time-text .num,
body.dark .time .colon {
  color: #fff;
}

.time .time-colon .colon {
  font-size: 40px;
  margin: 0 10px;
}

.time .time-colon .time-text .text {
  font-size: 12px;
  font-weight: 700;
  letter-spacing: 2px;
}

body.dark .time .time-colon .text {
  color: #fff;
}

body.dark .name {
  color: #fff;
}

@media only screen and (max-width: 600px) {
  body {
    display: block;
    width: 75%;
  }

  section {
    min-height: 28vh;
    width: 90vw;
  }

  section .container {
    height: 25vh;
    max-width: 95vw;
  }

  .time .time-colon .time-text {
    height: 50px;
    width: 50px;
    display: flex;
    align-items: center;
    flex-direction: column;
    justify-content: center;
    background: #f0f8ff;
    border-radius: 6px;
    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
  }

  .time .time-colon .time-text {
    font-size: 90%;
  }

  .time .time-colon .time-text .text {
    font-size: 20%;
  }

  .time .time-colon .am_pm {
    position: absolute;
    top: 0;
    right: -35px;
    font-size: 75%;
    font-weight: 700;
    letter-spacing: 1px;
  }
}

